    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app
    TODO: Fix annoying status menu output issue
    TODO: Fix issue where "Use as template" is shown even though Status Item mode is "Text"
    TODO: Test stdin stuff in command line tool
    TODO: Fix performance issue with printing many lines to text window

    * Fixed bug where files that had been moved were not list in red color in Bundled Files list
    * Droplet apps now quit when their window is closed
    * Relative paths are now supported in Platypus Profiles (but only through manual editing)
    * ScriptExec now parses shebang during debug if no interpreter is provided in AppSettings
    * Got rid of the TMP_STDIN_PATH hack
    * The Platypus Profile format has changed slightly in this version, but old formats can still be read
    * Fixed issue where valid menu items were disabled in Action menu
    * Updated documentation & man page, remove refs to options that are gone (text encoding, secure script)
    * Fixed issue with console spamming due to missing CFBundleTypeRole
    * Fixed bug where text settings were not properly loaded by the GUI
    * Fixed bug where bundling files with the -f flag didn't work in the command line tool
    * Fixed bug where the command line tool would erroneously try to validate whole argument strings instead of individual UTI strings
    * Fixed bug where suffix editing buttons remained enabled when they shouldn't be
    * Got rid of text encoding settings. Platypus now uses UTF8, and you should too.
    * Got rid of "Secure bundled script" option, which was useless bullshit anyway
    * Bundled files table view now uses combined image and text cell instead of two columns
    * Renamed Advanced menu to Action
    * Fixed issue where main application window would not remember its last position

5.1
    * New Build All Examples feature